--- a/home/index.html
+++ b/home/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/flexbox-grid.css?version=0.1">
 <link rel="stylesheet" href="css/bind.css?version=0.1">
+<link rel="stylesheet" href="css/images.css?version=0.1">    
 
 </head>
 <body>
