--- a/home/index.html
+++ b/home/index.html
@@ -41,9 +41,19 @@
     <div v-bind:class="vueClass">This element is bound to the "pinkBG" class.
     </div>
 </div>
+
+    <div id="app2">
+  <div>
+    <figure v-for="x in manyFoods">
+      <img v-bind:src="x.url">
+      <figcaption>{{ x.name }}</figcaption>
+    </figure>
+  </div>
+  
  
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="js/vue.js"></script>
+<script src="js/images.js"></script>        
  
 
  
